Ensure always enough space to prevent anchored text box from jumping

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -121,6 +121,8 @@ form#edit-person {
 }
 
 .document-container {
+  min-height: 800px;
+
   .article-summary {
     margin-top: 10px;
   }
